<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>cloud.xcan.angus</groupId>
    <artifactId>AngusInfra</artifactId>
    <version>1.0.0</version>
  </parent>

  <artifactId>xcan-angustester.parent</artifactId>
  <name>AngusTester :: Parent</name>
  <version>1.0.0</version>
  <packaging>pom</packaging>
  <description>AngusTester (referred to as AT) helps software development teams conduct software
    development and testing activities efficiently and sustainably, while meeting the requirements
    of agile development and agile testing for clients.
  </description>

  <modules>
    <module>model</module>
    <module>api</module>
    <module>core</module>
    <module>boot</module>
    <module>extension</module>
    <module>docs</module>
  </modules>

  <organization>
    <name>XCan Cloud</name>
    <url>http://www.xcan.cloud</url>
  </organization>

  <licenses>
    <license>
      <name>GPL-3.0 License</name>
      <url>https://www.gnu.org/licenses/gpl-3.0.html</url>
    </license>
    <license>
      <name>XCan Business License, Version 1.0</name>
      <url>http://www.xcan.cloud/licenses/XCBL-1.0</url>
    </license>
  </licenses>

  <scm>
    <url>scm:git:http://github.com/xcancloud/AngusTester</url>
    <connection>scm:git:git@github.com/xcancloud/AngusTester.git</connection>
    <developerConnection>scm:git:http://github.com/xcancloud/AngusTester.git
    </developerConnection>
    <tag>${project.version}</tag>
  </scm>

  <issueManagement>
    <system>gitlab</system>
    <url>http://github.com/xcancloud/angustester/-/issues</url>
  </issueManagement>

  <developers>
    <developer>
      <name>XiaoLong Liu</name>
      <email>lxl@xcan.cloud</email>
      <organization>XCan Company</organization>
      <organizationUrl>http://www.xcan.cloud</organizationUrl>
      <roles>
        <role>Developer</role>
        <role>Project Manager</role>
        <role>Architect</role>
      </roles>
    </developer>
  </developers>

  <mailingLists>
    <mailingList>
      <name>Dev Mailing List</name>
      <post>dev@xcan.cloud</post>
      <subscribe>dev-subscribe@xcan.cloud</subscribe>
      <unsubscribe>dev-unsubscribe@xcan.cloud</unsubscribe>
    </mailingList>
  </mailingLists>

  <contributors/>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

    <java.version>17</java.version>
    <maven.compiler.source>${java.version}</maven.compiler.source>
    <maven.compiler.target>${java.version}</maven.compiler.target>

    <xcan-infra.bom.version>1.0.0</xcan-infra.bom.version>
    <xcan-plugin.bom.version>1.0.0</xcan-plugin.bom.version>
    <xcan-jmock.bom.version>1.0.0</xcan-jmock.bom.version>

    <xcan-angusmeter.bom.version>1.0.0</xcan-angusmeter.bom.version>

    <xcan-angusgm.api.version>1.0.0</xcan-angusgm.api.version>
    <xcan-angusctrl.api.version>1.0.0</xcan-angusctrl.api.version>
    <xcan-angusapi.api.version>1.0.0</xcan-angusapi.api.version>
    <xcan-angusstorage.api.version>1.0.0</xcan-angusstorage.api.version>
    <xcan-angusess.api.version>1.0.0</xcan-angusess.api.version>

    <vngx-jsch.version>0.10</vngx-jsch.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>cloud.xcan.angus</groupId>
        <artifactId>xcan-infra.bom</artifactId>
        <version>${xcan-infra.bom.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>

      <dependency>
        <groupId>cloud.xcan.angus</groupId>
        <artifactId>xcan-plugin.bom</artifactId>
        <version>${xcan-plugin.bom.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>

      <dependency>
        <groupId>cloud.xcan.jmock</groupId>
        <artifactId>xcan-jmock.bom</artifactId>
        <version>${xcan-jmock.bom.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>

      <dependency>
        <groupId>cloud.xcan.angus</groupId>
        <artifactId>xcan-angusmeter.bom</artifactId>
        <version>${xcan-angusmeter.bom.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>

      <dependency>
        <groupId>cloud.xcan.angus</groupId>
        <artifactId>xcan-angustester.model</artifactId>
        <version>${project.version}</version>
      </dependency>

      <dependency>
        <groupId>cloud.xcan.angus</groupId>
        <artifactId>xcan-angustester.api</artifactId>
        <version>${project.version}</version>
      </dependency>

      <dependency>
        <groupId>cloud.xcan.angus</groupId>
        <artifactId>xcan-angustester.core</artifactId>
        <version>${project.version}</version>
      </dependency>

      <dependency>
        <groupId>cloud.xcan.angus</groupId>
        <artifactId>xcan-angustester.extension-import-api</artifactId>
        <version>${project.version}</version>
      </dependency>

      <dependency>
        <groupId>cloud.xcan.angus</groupId>
        <artifactId>xcan-angusgm.api</artifactId>
        <version>${xcan-angusgm.api.version}</version>
      </dependency>

      <dependency>
        <groupId>cloud.xcan.angus</groupId>
        <artifactId>xcan-angusstorage.api</artifactId>
        <version>${xcan-angusstorage.api.version}</version>
      </dependency>

      <dependency>
        <groupId>cloud.xcan.angus</groupId>
        <artifactId>xcan-angusctrl.api</artifactId>
        <version>${xcan-angusctrl.api.version}</version>
      </dependency>

      <dependency>
        <groupId>cloud.xcan.angus</groupId>
        <artifactId>xcan-angusess.api</artifactId>
        <version>${xcan-angusess.api.version}</version>
      </dependency>

      <dependency>
        <groupId>org.vngx</groupId>
        <artifactId>vngx-jsch</artifactId>
        <version>${vngx-jsch.version}</version>
      </dependency>

    </dependencies>
  </dependencyManagement>
</project>
